# LIA-Assistant

./: .dockerignore  .editorconfig  .env.example  .env.min.prod  .env.prod.example  .gitattributes  .gitignore  .prettierignore  .sops.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIA.code-workspace  LICENSE  Makefile  NOTICE.md  README.md  SECURITY.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.prod.yml  package.json  pnpm-lock.yaml  projectbrowser.md  turbo.json
apps/api/: .dockerignore  .env.alerting.example  .env.test  Dockerfile.dev  Dockerfile.prod  Makefile  babel.cfg  coverage.json  docker-entrypoint.sh  learned_plan-pattern.json  pyproject.toml  pyproject.toml.vulture  requirements-dev.txt  requirements.txt  vulture_whitelist.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2025_01_15_0001-initial_migration.py  2025_10_19_1337-090adf8517f4_increase_picture_url_length_to_2048_.py  2025_10_19_1920-cd42ca544c43_add_connector_global_config_and_admin_.py  2025_10_20_1808-add_llm_pricing_tables.py  2025_10_23_2149-f7d5f80a270e_fix_user_statistics_timezone_columns.py  2025_10_23_2308-62f067eda14d_add_token_and_message_tracking_tables.py  2025_10_23_2320-5421aa3ae914_increase_cost_precision_to_6_decimals.py  2025_10_24_1949-add_conversation_persistence.py  2025_10_25_0032-add_run_id_to_token_logs.py  2025_10_26_0000-add_user_timezone.py  2025_11_03_0311-f557be2223e8_drop_unused_embeddings_table.py  2025_11_04_0001-add_multi_provider_llm_pricing.py  2025_11_05_1500-seed_openai_pricing.py  2025_11_05_1513-add_token_usage_indexes_for_lifetime_metrics.py  2025_11_07_0000-add_user_language.py  2025_11_09_1600-add_plan_approvals_table.py  2025_11_28_0000-add_connector_preferences.py  2025_11_29_0001-seed_gemini_pricing.py  2025_12_03_0000-add_personalities.py  2025_12_12_0000-add_user_home_location.py  2025_12_21_0000-add_user_memory_preference_and_embedding_pricing.py  2025_12_24_0001-add_user_voice_preference.py  2025_12_27_0001-add_user_last_login.py  2025_12_28_0001-add_reminders_table.py  2025_12_28_0002-add_user_fcm_tokens_table.py  2026_01_10_0001-add_user_theme_preferences.py  2026_01_16_0001-add_system_settings_table.py  2026_01_16_0002-add_user_tokens_display_preference.py  2026_01_26_0001-add_user_font_family.py  2026_01_26_0002-add_interests_system.py  2026_01_28_0001-add_user_onboarding_completed.py  2026_01_30_0001-change_interest_uniqueness.py  2026_01_30_0002-add_admin_broadcast_tables.py  2026_02_01_0001-add_user_voice_mode_enabled.py  2026_02_03_0001-migrate_google_places_to_api_key.py  2026_02_04_0001-add_google_api_tracking.py  2026_02_04_0002-add_unaccent_extension.py  2026_02_07_0001-add_user_debug_panel_preference.py  2026_02_27_0001-create_scheduled_actions_table.py  2026_02_28_0001-create_user_mcp_servers_table.py  (+49 more)
apps/api/locales/: messages.pot
apps/api/monitoring/alertmanager/: .gitignore  alertmanager-email-only.yml.template  alertmanager.yml.template  docker-entrypoint.sh  validate_config.py
apps/api/scripts/: calculate_prompt_hashes.py  check_pricing.py  check_prompt_versions.py  download-stt-model.sh  manage_plan_patterns.py  reindex_embeddings.py  scaffold.py  seed_system_rag.py  set_connector_error.py  test_embedding_models.py  test_oauth_health_simple.py  train_pattern_learner.py  validate_config.py  validate_hitl_metrics.py  validate_llm_config.py  validate_token_alignment.py
apps/api/scripts/benchmark/: benchmark_sse_streaming.py  create_benchmark_user.sql  load_test_hitl_streaming.py  run_benchmark.py
apps/api/scripts/data/: cleanup_orphan_connectors.py  create_admin.py  seed_dev.py
apps/api/scripts/debug/: diagnose_contact_fields.py  diagnose_tokens.py  measure_prompt_tokens.py
apps/api/scripts/i18n/: add_email_translations.py  compile_translations.py
apps/api/scripts/training/: calendar_safe.txt  calendar_unsafe.txt  contacts_safe.txt  contacts_unsafe.txt  drive.txt  emails_safe.txt  multi_domain_safe.txt  multi_domain_unsafe.txt  perplexity.txt  places.txt  routes.txt  tasks_safe.txt  tasks_unsafe.txt  weather.txt  wikipedia.txt
apps/api/src/: main.py
apps/api/src/core/: bootstrap.py  constants.py  context.py  dependencies.py  exceptions.py  export_utils.py  field_names.py  i18n.py  i18n_api_messages.py  i18n_dates.py  i18n_drafts.py  i18n_hitl.py  i18n_patterns.py  i18n_types.py  i18n_v3.py  llm_agent_config.py  llm_config_helper.py  llm_utils.py  middleware.py  pagination_helpers.py  partial_error_handler.py  rate_limit_config.py  repository.py  session_dependencies.py  session_helpers.py  time_utils.py  unit_of_work.py  validators.py
apps/api/src/infrastructure/: async_utils.py
apps/api/tests/: __init__.py  conftest.py  test_context_cleanup_performance.py  test_http_rate_limiting.py  test_llm_config.py  test_profiling_baseline.py  test_prompts.py  test_router_state.py
apps/api/tests/agents/: __init__.py  test_agent_registry.py  test_agent_result_schemas.py  test_catalogue_manifests.py  test_composite_key_format_consistency.py  test_condition_evaluator.py  test_conditional_step_evaluation.py  test_context_cleanup_on_reset.py  test_context_manager_expanded.py  test_execution_result_mapping.py  test_get_contact_details_save_mode.py  test_get_context_list_tool.py  test_graph_build.py  test_group_jinja_pattern.py  test_hitl_cache_integration.py  test_hitl_classifier.py  test_hitl_middleware.py  test_hitl_store.py  test_manifest_builder.py  test_mappers.py  test_message_filters.py  test_message_windowing.py  test_multi_keys_store_pattern.py  test_no_legacy_registry_imports.py  test_node_utils.py  test_nodes_windowing_integration.py  test_orchestration.py  test_phase32_e2e_integration.py  test_plan_validator.py  test_pydantic_normalization.py  test_response_node.py  test_response_node_formatting.py  test_response_node_security.py  test_resumption_strategies.py  test_runtime_helpers.py  test_save_details_current_management.py  test_state_performance.py  test_structured_output_helper.py  test_tool_dependencies_concurrency.py  test_tool_schemas.py  (+2 more)
apps/api/tests/core/: test_unit_of_work.py  (+4 more)
(+2246 files in other folders)
